--- a/templates/main_arrumado.html
+++ b/templates/main_arrumado.html
@@ -59,7 +59,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../Documents/images/1920x500.gif" alt="Second slide">
+                <img class="d-block w-100" src="/static/images/protoboard.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Item 2 Heading</h5>
                   <p>Item 2 Description</p>
@@ -122,7 +122,7 @@
             <img class="card-img-top" src="/static/images/vent.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Ventilador</h5>
-	  {% if pins[23].state == true %}
+	  {% if pins[21].state == true %}
       <a href="/21/off" class="button">Desligar</a>
       {% else %}
       <a href="/21/on" class="button2">Ligar</a>  
