--- a/templates/main_arrumado.html
+++ b/templates/main_arrumado.html
@@ -131,21 +131,9 @@
           </div>
         </div>
       </div>
-      <div class="row text-center mt-4">
-        <div class="col-md-4 pb-1 pb-md-0"> </div>
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="../Documents/images/400X200.gif" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-<a href="#" class="btn btn-primary">Add to Cart</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 pb-1 pb-md-0"> </div>
-      </div>
-    </div>
-    <hr>
+<hr>
+<hr>	
+<h2 class="text-center">SENSORES</h2>
 <hr>
 <hr>
     <div class="container text-white bg-dark p-4">
