--- a/templates/main_arrumado.html
+++ b/templates/main_arrumado.html
@@ -136,6 +136,9 @@
 <h2 class="text-center">SENSORES</h2>
 <hr>
 <hr>
+<h3>temperatura</h3>
+		
+<hr>
     <div class="container text-white bg-dark p-4">
       <div class="row">
         <div class="col-6 col-md-8 col-lg-7">
