--- a/templates/main_arrumado.html
+++ b/templates/main_arrumado.html
@@ -136,7 +136,9 @@
 <h2 class="text-center">SENSORES</h2>
 <hr>
 <hr>
-<h3>temperatura</h3>
+{% if len(temps) == 1 %}
+<h3>temps[0]</h3>
+{% endif %}
 		
 <hr>
     <div class="container text-white bg-dark p-4">
