--- a/templates/sensores.html
+++ b/templates/sensores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Automation - index</title>
+    <title>Automation - sensores</title>
     <!-- Bootstrap -->
     <link href="/static/styles/style.css" type="text/css" rel="stylesheet">
   </head>
@@ -43,94 +43,24 @@
         </div>
       </div>
     </nav>
-    <div class="container mt-3">
-      <div class="row">
-        <div class="col-12">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="1"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="/static/images/logo_crude.jpg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="/static/images/protoboard.jpg" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Item 2 Heading</h5>
-                  <p>Item 2 Description</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="../Documents/images/1920x500.gif" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Item 3 Heading</h5>
-                  <p>Item 3 Description</p>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <hr>
-    </div>
+<hr>   
+<h2 class="text-center">SENSORES</h2>
 <hr>
-    <h2 class="text-center">DISPOSITIVOS</h2>
-    <hr>
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="/static/images/luz.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Luz</h5>
-      {% if pins[23].state == true %}
-      <a href="/23/off" class="button">Desligar</a>
-      {% else %}
-      <a href="/23/on" class="button2">Ligar</a>  
-      {% endif %}
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="/static/images/luz.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Luz quarto</h5>
-	  {% if pins[24].state == true %}
-      <a href="/24/off" class="button">Desligar</a>
-      {% else %}
-      <a href="/24/on" class="button2">Ligar</a>  
-      {% endif %}
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="/static/images/vent.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Ventilador</h5>
-	  {% if pins[25].state == true %}
-      <a href="/25/off" class="button">Desligar</a>
-      {% else %}
-      <a href="/25/on" class="button2">Ligar</a>  
-      {% endif %}
-            </div>
-          </div>
-        </div>
-      </div>
+<hr>
+	<h3>Temperatura = {{ Temperatura }} °C</h3>
+	<h3>Umidade = {{ Umid }} %</h3>
+	<hr>
+	<h3>Ultima leitura: {{ tempo }} -> <a href='/sensores' >Atualizar</a></h3>
+	<p>Digite a temperatura a ser mantida
+	<form method = "POST">
+			<input name = "temp_max" value = {{ temp_max }}>
+			<input type = "submit" value = "OK"> 
+			</form></p>
+	<img src="/sensores/plot/temp" alt = "Image Placeholder" width="49%">
+	<img src="/sensores/plot/umid" alt = "Image Placeholder" width="49%">
+	<hr>
+		    
+
 
 <hr>
     <div class="container text-white bg-dark p-4">
