--- a/templates/sensores.html
+++ b/templates/sensores.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv = "refresh" content = "20">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Automation - sensores</title>
@@ -47,15 +48,36 @@
 <h2 class="text-center">SENSORES</h2>
 <hr>
 <hr>
-	<h3>Temperatura = {{ Temperatura }} °C</h3>
-	<h3>Umidade = {{ Umid }} %</h3>
+<div class = "row">
+	<div class = "col-md-6"><h3>Temperatura atual = {{ Temperatura }} °C</h3></div>
+	<div class = "col-md-6"><form action = "/sensores" method = "POST">
+								<label for = "username">Digite a temperatura a ser mantida [°C]:</label>
+								<input name = "temp_max" value = {{ temp_max }}>
+								<input type = "submit" value = "OK"> 
+								</form>
+								<form action = "/sensores" method = "POST">
+									<label for = "username">Escolha a data:</label>
+									<select name = "dia_escolhido">
+									{% for dia in datas %}
+									<option value = {{ dia }} selected> {{ dia }} </option>
+									{% endfor %}
+									</select>
+									<input type = "submit" value = "OK"> 
+									</form></div>
+           
+</div>
+
+<div class = "row">
+	<div class = "col-md-8"><h3>Umidade atual = {{ Umid }} %</h3></div>
+	
+</div>
+
 	<hr>
-	<h3>Ultima leitura: {{ tempo }} -> <a href='/sensores' >Atualizar</a></h3>
-	<p>Digite a temperatura a ser mantida
-	<form method = "POST">
-			<input name = "temp_max" value = {{ temp_max }}>
-			<input type = "submit" value = "OK"> 
-			</form></p>
+	<h3>Primeira leitura do dia {{ escolhe_dia }}: {{ tempo_inicio }} </h3>
+	<h3>Ultima leitura do dia {{ escolhe_dia }}: {{ tempo }} -> <a href='/sensores' >Atualizar</a></h3>
+
+
+							
 	<img src="/sensores/plot/temp" alt = "Image Placeholder" width="49%">
 	<img src="/sensores/plot/umid" alt = "Image Placeholder" width="49%">
 	<hr>
