--- a/templates/sensores.html
+++ b/templates/sensores.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Automation - sensores</title>
     <!-- Bootstrap -->
-    <link href="/static/styles/style.css" type="text/css" rel="stylesheet">
+   <link href="/static/styles/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">CRUDE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,10 +22,13 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Dispositivos</a>
+              <a class="nav-link" href="/camera/historico">Segurança</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sensores">Sensores</a>
+              <a class="nav-link" href="/sensores">Sensores</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/comofunciona">Como funciona?</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -73,8 +76,8 @@
 </div>
 
 	<hr>
-	<h3>Primeira leitura do dia {{ escolhe_dia }}: {{ tempo_inicio }} </h3>
-	<h3>Ultima leitura do dia {{ escolhe_dia }}: {{ tempo }} -> <a href='/sensores' >Atualizar</a></h3>
+	<h3>Primeira leitura do dia {{ escolhe_dia_site }}: {{ tempo_inicio }} </h3>
+	<h3>Ultima leitura do dia {{ escolhe_dia_site }}: {{ tempo }} -> <a href='/sensores' >Atualizar</a></h3>
 
 
 							
