--- a/templates/camera_historico.html
+++ b/templates/camera_historico.html
@@ -51,3 +51,8 @@
       <h3>{{ historico }}</h3>
       <img src="/static/intrusos/{{ historico }}" alt = "Image Placeholder" width="49%">
       
+    <script src="/static/styles/jquery-3.2.1.min.js"></script>
+    <script src="/static/styles/popper.min.js"></script>
+    <script src="/static/styles/bootstrap-4.0.0.js"></script>
+    </body>
+</html>
