--- a/templates/comofunciona.html
+++ b/templates/comofunciona.html
@@ -58,3 +58,8 @@
     <h2 class="text-center"><img class="card-img-top" src="static/images/comofunciona.png" alt="Card image cap"></h2>
     <hr>
   </div>
+    <script src="/static/styles/jquery-3.2.1.min.js"></script>
+    <script src="/static/styles/popper.min.js"></script>
+    <script src="/static/styles/bootstrap-4.0.0.js"></script>
+    </body>
+</html>
