--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -2,6 +2,33 @@ img{
 	display: display: inline-block
 }
 	
+.button-ok{
+ display: inline-block;
+ border:1px solid #030808;
+ color: #080000;
+ border-radius: 10px 10px 10px 10px;
+ -webkit-border-radius: 10px 10px 10px 10px;
+ -moz-border-radius: 10px 10px 10px 10px;
+ font-family: Arial;
+ width: auto;
+ height: auto;
+ font-size: 16px;
+ padding: 3px 6px;
+ box-shadow: inset 0px 1px 1px 0 #FFFFFF,inset 0 -1px 0 0 #0F0D06,inset 0 0 0 1px #000000,inset 0 2px 4px 0 #D4D4D4;
+ -moz-box-shadow: inset 0px 1px 1px 0 #FFFFFF,inset 0 -1px 0 0 #0F0D06,inset 0 0 0 1px #000000,inset 0 2px 4px 0 #D4D4D4;
+ -webkit-box-shadow: inset 0px 1px 1px 0 #FFFFFF,inset 0 -1px 0 0 #0F0D06,inset 0 0 0 1px #000000,inset 0 2px 4px 0 #D4D4D4;
+ text-shadow: 0px 1px 0px #FFFFFF;
+ background-image: linear-gradient(to top, #C4C4C4, #D9D9D9);
+ background-color: #918C8D;
+}
+.button-ok:hover, .button-ok:active{
+ border:1px solid #000000;
+ color: #000000;
+ box-shadow: inset 0px 1px 0 0 #ABA5A8,inset 0 -1px 0 0 #8F888B,inset 0 0 0 1px #8A8687;
+ -moz-box-shadow: inset 0px 1px 0 0 #ABA5A8,inset 0 -1px 0 0 #8F888B,inset 0 0 0 1px #8A8687;
+ -webkit-box-shadow: inset 0px 1px 0 0 #ABA5A8,inset 0 -1px 0 0 #8F888B,inset 0 0 0 1px #8A8687;
+ background-color: #5FE868;
+}
 
 .button {
   background-color: red;
