--- a/templates/main_arrumado.html
+++ b/templates/main_arrumado.html
@@ -7,6 +7,7 @@
     <title>CRUDE - Digital</title>
     <!-- Bootstrap -->
     <link href="/static/styles/style.css" type="text/css" rel="stylesheet">
+    <link href="/static/styles/botao.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -93,7 +94,17 @@
 <hr>
     <h2 class="text-center">DISPOSITIVOS</h2>
     <hr>
+    
+    <div class="four">
+  <div class="button-wrap">
+    <div class="button-bg">
+      <div class="button-out"></div>
+      <div class="button-in"></div>
+      <div class="button-switch"><a href"/23/off"></a></div>
+    </div>
   </div>
+</div>
+
     <div class="container">
       <div class="row text-center">
         <div class="col-md-3 pb-1 pb-md-0">
@@ -114,6 +125,7 @@
             <img class="card-img-top" src="/static/images/luz.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Luz quarto</h5>
+			
 	  {% if pins[24].state == true %}
       <a href="/24/off" class="button">Desligar</a>
       {% else %}
@@ -202,5 +214,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/styles/popper.min.js"></script>
     <script src="/static/styles/bootstrap-4.0.0.js"></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="/static/styles/botao.js"></script>
   </body>
 </html>
