--- a/templates/sensores.html
+++ b/templates/sensores.html
@@ -55,8 +55,8 @@
 	<div class = "col-md-6"><h3>Temperatura atual = {{ Temperatura }} °C</h3></div>
 	<div class = "col-md-6"><form action = "/sensores" method = "POST">
 								<label for = "username">Digite a temperatura a ser mantida [°C]:</label>
-								<input name = "temp_max" value = {{ temp_max }}>
-								<input type = "submit" value = "OK"> 
+								<input name = "temp_max" value = {{ temp_max }} size = "4" maxlength = "3">
+								<input type = "submit" value = "OK" class = "button-ok"> 
 								</form>
 								<form action = "/sensores" method = "POST">
 									<label for = "username">Escolha a data:</label>
@@ -65,7 +65,7 @@
 									<option value = {{ dia }} selected> {{ dia }} </option>
 									{% endfor %}
 									</select>
-									<input type = "submit" value = "OK"> 
+									<input type = "submit" value = "OK" class = "button-ok"> 
 									</form></div>
            
 </div>
@@ -144,9 +144,7 @@
         </div>
       </div>
     </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/static/styles/jquery-3.2.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/styles/popper.min.js"></script>
     <script src="/static/styles/bootstrap-4.0.0.js"></script>
   </body>
