--- a/templates/comofunciona.html
+++ b/templates/comofunciona.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Como funciona?</title>
-    <!-- Bootstrap -->
-    <link href="static/styles/style.css" type="text/css" rel="stylesheet">
+    <title>CRUDE - Digital</title>
+    <link href="/static/styles/style.css" type="text/css" rel="stylesheet">
+    <link href="/static/styles/botao.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -20,23 +20,17 @@
             <li class="nav-item active">
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Dispositivos</a>
+             <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clima</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/sensores">Medições ao longo do dia</a>
+                <a class="dropdown-item" href="/minimas_maximas">Mediçoes mínimas e máximas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/sensores">Sensores</a>
+              <a class="nav-link" href="/camera/historico">Segurança</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/comofunciona">Como funciona?</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
