--- a/templates/camera_historico.html
+++ b/templates/camera_historico.html
@@ -42,7 +42,7 @@
     </nav>
 <hr>
       <h2 class="text-center">SEGURANÇA</h2>
-      <form action = "/sensores" method = "POST">
+      <form action = "/camera/historico" method = "POST">
                   <label for = "username">Escolha a data:</label>
                   <select name = "dia_foto">
                   {% for dia in dias_foto %}
