--- a/templates/main_arrumado.html
+++ b/templates/main_arrumado.html
@@ -51,7 +51,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="/static/images/logo_crude.jpg" alt="First slide">
+                <img class="d-block w-100" src="/static/images/logo_pihome.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
@@ -180,15 +180,15 @@
         </div>
         <div class="col-md-4 col-lg-5 col-6">
           <address>
-            <strong>CRUDE, Inc.</strong><br>
+            <strong>PI-HOME, Inc.</strong><br>
             Vila Olímpia, 04546-043<br>
             Brasil<br>
             São Paulo-SP<br>
             <abbr title="Phone">1234-5678</abbr>
           </address>
           <address>
-            <strong>E-MAIL CRUDE</strong><br>
-            <a href="mailto:#">crude@digital.com.br</a>
+            <strong>E-MAIL PIHOME</strong><br>
+            <a href="mailto:#">pihome@digital.com.br</a>
           </address>
         </div>
       </div>
@@ -197,7 +197,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © CRUDE. All rights reserved.</p>
+            <p>Copyright © PI-HOME. All rights reserved.</p>
           </div>
         </div>
       </div>
