--- a/templates/login.html
+++ b/templates/login.html
@@ -16,16 +16,13 @@
     <h1>Dados de login</h1>
     <p>Preencha os dados para entrar na sua conta.</p>
     <hr>
-
+	<form name="meuForm" class="form-login" method="post" onsubmit="return validateForm()"
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Digite seu email" name="email" href="email" required>
 
     <label for="psw"><b>Senha</b></label>
-    <input type="password" placeholder="Digite sua senha" name="psw" href="senha"required>
+    <input type="password" placeholder="Digite sua senha" name="senha" href="senha" required>
     <div class="container signin">
-    {% if email in listaemail and senha in listasenha %}
-      <a href="main_arrumado.html" class="botao5">entrar</a>
-    {% else %}
-      <p>Crie um cadastro para entrar no site</p>
-    {%end if%}
-  </div>
+    <a href="main_arrumado.html" class="botao5">entrar</a>
+
+	  </form>
