--- a/templates/comofunciona.html
+++ b/templates/comofunciona.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CRUDE - Digital</title>
+    <title>PiHome - Como Funciona</title>
     <link href="/static/styles/style.css" type="text/css" rel="stylesheet">
     <link href="/static/styles/botao.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">CRUDE</a>
+        <a class="navbar-brand" href="/">PiHome</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
