--- a/templates/main_arrumado.html
+++ b/templates/main_arrumado.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CRUDE - Digital</title>
+    <title>PiHome - Home</title>
     <link href="/static/styles/style.css" type="text/css" rel="stylesheet">
     <link href="/static/styles/botao.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">CRUDE</a>
+        <a class="navbar-brand" href="/">PiHome</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -87,17 +87,6 @@
 <hr>
     <h2 class="text-center">DISPOSITIVOS</h2>
     <hr>
-    
-    <div class="four">
-  <div class="button-wrap">
-    <div class="button-bg">
-      <div class="button-out"></div>
-      <div class="button-in"></div>
-      <div class="button-switch"><a href"/23/off"></a></div>
-    </div>
-  </div>
-</div>
-
     <div class="container">
       <div class="row text-center">
         <div class="col-md-3 pb-1 pb-md-0">
@@ -188,7 +177,7 @@
           </address>
           <address>
             <strong>E-MAIL PIHOME</strong><br>
-            <a href="mailto:#">pihome@digital.com.br</a>
+            <a href="mailto:#">pihomedigital@gmail.com</a>
           </address>
         </div>
       </div>
@@ -202,9 +191,7 @@
         </div>
       </div>
     </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/static/styles/jquery-3.2.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/styles/popper.min.js"></script>
     <script src="/static/styles/bootstrap-4.0.0.js"></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
