--- a/templates/comofunciona.html
+++ b/templates/comofunciona.html
@@ -49,9 +49,56 @@
     <p>A empresa funciona aplicando a tecnologia dentro da casa do cliente. Pedro Luiz, Pedro Paulo e Rafael Libertini são três amigos engenheiros que criaram um modo mais fácil de você controlar sua casa, eles trouxeram o controle para a palma da sua mão. Quer saber como funciona o produto da CRUDE digital? Observe o esquema abaixo:</p>
     <div>
 <hr>
-    <h2 class="text-center"><img class="card-img-top" src="static/images/comofunciona.png" alt="Card image cap"></h2>
+    <h2 class="text-center"><img class="card-img-top" src="static/images/comofunciona1.png" alt="Card image cap"></h2>
     <hr>
   </div>
+ 
+ <hr>
+<h3 class="text-center">CONTATOS</h3>
+
+<hr>
+    <div class="container text-white bg-dark p-4">
+      <div class="row">
+        <div class="col-6 col-md-8 col-lg-7">
+          <div class="row text-center">
+            <div class="col-sm-6 col-md-4 col-lg-10 col-12">
+              <ul class="list-unstyled">
+				  <style> .textobr{
+									color: white;
+									}
+									</style>
+                <li  class = "textobr"> Pedro Costa: <a href='/'>pedrolcb@al.insper.edu.br</a> </li>
+                <li class = "textobr"> Rafael Libertini: <a href='/'>rafael.libertini@gmail.com</a> </li>
+                <li class = "textobr"> Pedro Paulo: <a href='/'>pedropauloficial@hotmail.com</a> </li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-5 col-6">
+          <address>
+            <strong class = "textobr">PI-HOME, Inc.</strong><br>
+            <h6 class = "textobr">Vila Olímpia, 04546-043<br></h6>
+            <h6 class = "textobr">Brasil<br></h6>
+            <h6 class = "textobr">São Paulo-SP<br></h6>
+            <abbr class = "textobr" title="Phone">1234-5678</abbr>
+          </address>
+          <address>
+            <strong class = "textobr">E-MAIL PIHOME</strong><br>
+            <a href="mailto:#">pihomedigital@gmail.com</a>
+          </address>
+        </div>
+      </div>
+    </div>
+    <footer class="text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p>Copyright © PI-HOME. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="/static/styles/jquery-3.2.1.min.js"></script>
     <script src="/static/styles/popper.min.js"></script>
     <script src="/static/styles/bootstrap-4.0.0.js"></script>
